manifests/deployment-3.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "mekubernetis-b4d2"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "mekubernetis-b4d2"
  template:
    metadata:
      labels:
        app: "mekubernetis-b4d2"
    spec:
      containers:
        - name: "mekubernetis-b4d2"
          image: "34344343434.azurecr.io/mekubernetis"
          ports:
          - containerPort: 80
