manifests/deployment-6.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "m5homework-20db"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "m5homework-20db"
  template:
    metadata:
      labels:
        app: "m5homework-20db"
    spec:
      containers:
        - name: "m5homework-20db"
          image: "m5homeworktest.azurecr.io/m5homework"
          ports:
          - containerPort: 80
