manifests/deployment-7.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "m5homework-b815"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "m5homework-b815"
  template:
    metadata:
      labels:
        app: "m5homework-b815"
    spec:
      containers:
        - name: "m5homework-b815"
          image: "reeeeeeeee.azurecr.io/m5homework"
          ports:
          - containerPort: 80
