manifests/service-2.yml
apiVersion: v1
kind: Service
metadata:
    name: "mekubernetis-431f"
    labels:
        app: "mekubernetis-431f"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "mekubernetis-431f"
