manifests/service-3.yml
apiVersion: v1
kind: Service
metadata:
    name: "mekubernetis-b4d2"
    labels:
        app: "mekubernetis-b4d2"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "mekubernetis-b4d2"
