manifests/service-6.yml
apiVersion: v1
kind: Service
metadata:
    name: "m5homework-20db"
    labels:
        app: "m5homework-20db"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "m5homework-20db"
