manifests/service-7.yml
apiVersion: v1
kind: Service
metadata:
    name: "m5homework-0e2b"
    labels:
        app: "m5homework-0e2b"
spec:
    type: ClusterIP
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "m5homework-0e2b"
