manifests/ingress-5.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "m5homework-20db"
    labels:
        app: "m5homework-20db"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: m5homework-m5homework-20db.be4a4e04b5be42a082de.westeurope.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "m5homework-20db"
                servicePort: 80
